engine.log
Traceback (most recent call last):
  File "/Users/song/Projects/check_chat_system/SmartCS_Desktop/smart-cs-pro/core_engine/engine.py", line 16, in <module>
    from api.ai_config import router as ai_router
  File "/Users/song/Projects/check_chat_system/SmartCS_Desktop/smart-cs-pro/core_engine/api/ai_config.py", line 23
    is_edit = !!cat_id
              ^
SyntaxError: invalid syntax
